Add course description form, API endpoint, and page enhancements

--- a/locale/messages/en.json
+++ b/locale/messages/en.json
@@ -22,5 +22,6 @@
   "somethingWrong": "something went wrong.",
   "CourseSetup": "Course Setup",
   "fieldsCompleted": "fields completed",
-  "Customize your course": "Customize your course"
+  "Customize your course": "Customize your course",
+  "courseUpdated": "Course Updated"
 }
