--- a/locale/messages/en.json
+++ b/locale/messages/en.json
@@ -23,5 +23,6 @@
   "CourseSetup": "Course Setup",
   "fieldsCompleted": "fields completed",
   "Customize your course": "Customize your course",
-  "courseUpdated": "Course Updated"
+  "courseUpdated": "Course Updated",
+  "ImageRequired": "Image is required"
 }
